# InfiniTime

src/: CMakeLists.txt  main.cpp
src/displayapp/: DisplayApp.cpp
src/displayapp/screens/: Notifications.cpp
src/drivers/: CMakeLists.txt
src/systemtask/: SystemTask.cpp
